fix spill over from contact page

--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -402,12 +402,6 @@ p {
     text-transform: capitalize;
 }
 
-// Dark Container
-.dark-con {
-    background-color: $clr--dark;
-    color: #ffffff;
-}
-
 // Background 
 .back {
     background-size: cover;
